--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,9 +3,18 @@
 // BUNDLE STYLES - critical
 // --------------------------------------------------
 
+// core
+@import "core/variables";
+@import "core/mixins";
+
 // layout
 @import "layout/app";
 @import "layout/bootstrap";
 
 // material
 @import "material/material";
+
+// components
+@import "components/back";
+@import "components/card";
+@import "components/list";
