feat: prepare fab

--- a/src/assets/styles/layout/_bootstrap.scss
+++ b/src/assets/styles/layout/_bootstrap.scss
@@ -2,4 +2,5 @@
 // LAYOUT | Bootstrap
 // --------------------------------------------------
 
+@import "~bootstrap/scss/bootstrap-reboot";
 @import "~bootstrap/scss/bootstrap-grid";
