--- a/src/app/features/contactlist/components/overview/overview.component.html
+++ b/src/app/features/contactlist/components/overview/overview.component.html
@@ -28,4 +28,12 @@
       </div>
     </div>
   </div>
+
+  <div class="fab-container">
+    <div class="container d-flex justify-content-end">
+      <button mat-fab color="primary">
+        <div class="material-icons">add</div>
+      </button>
+    </div>
+  </div>
 </section>
