--- a/src/assets/styles/layout/_app.scss
+++ b/src/assets/styles/layout/_app.scss
@@ -3,7 +3,8 @@
 // --------------------------------------------------
 
 body {
-  min-width: 320px;
+  margin: 0;
+  min-width: 375px;
   background-color: #f7f7f7;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
