feat: add edit-dialog

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 
 // components
 @import "components/back";
+@import "components/button-row";
 @import "components/card";
-@import "components/list";
 @import "components/fab";
+@import "components/list";
