--- a/src/app/features/contactlist/components/overview/overview.component.html
+++ b/src/app/features/contactlist/components/overview/overview.component.html
@@ -31,7 +31,7 @@
 
   <div class="fab-container">
     <div class="container d-flex justify-content-end">
-      <button mat-fab color="primary">
+      <button mat-fab color="primary" (click)="openDialog()">
         <div class="material-icons">add</div>
       </button>
     </div>
