feat: add store and prepare details

--- a/src/app/features/contactlist/components/details/details.component.html
+++ b/src/app/features/contactlist/components/details/details.component.html
@@ -1,1 +1,9 @@
-<p>details works! for {{ id }}</p>
+<div class="card">
+  <ng-container *ngIf="contact$ | async as contact; else noItem">
+    {{ contact | json }}
+  </ng-container>
+
+  <ng-template #noItem>
+    <div class="message is-error">Item not found!</div>
+  </ng-template>
+</div>
