--- a/src/assets/styles/core/_variables.scss
+++ b/src/assets/styles/core/_variables.scss
@@ -10,7 +10,7 @@ $ink-dark: #000;
 // background
 $background-surface: #fff;
 $background-surface-hover: rgb(240, 240, 240);
-$background-surface-activated: rgb(225, 225, 225);
+$background-surface-active: rgb(225, 225, 225);
 
 // animation
 $duration-s: 150ms;
@@ -21,3 +21,8 @@ $timing-entrance: cubic-bezier(0, 0, 0.2, 1);
 $box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.02), 0 2px 8px 0 rgba(0, 0, 0, 0.02);
 $divider: 1px solid rgba($ink, 0.12);
 $border-radius: 8px;
+
+// message
+
+$info-ink: #044868;
+$error-ink: #73000c;
