--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import "components/back";
 @import "components/button-row";
 @import "components/card";
+@import "components/display-field";
 @import "components/fab";
 @import "components/list";
 @import "components/message";
