--- a/src/app/features/contactlist/components/dialog/edit-dialog.component.html
+++ b/src/app/features/contactlist/components/dialog/edit-dialog.component.html
@@ -22,6 +22,7 @@
         <mat-form-field appearance="fill" class="d-block">
           <mat-label>Phone</mat-label>
           <input type="text" matInput formControlName="phone" />
+          <div class="material-icons" matPrefix>phone</div>
         </mat-form-field>
       </div>
 
@@ -29,6 +30,7 @@
         <mat-form-field appearance="fill" class="d-block">
           <mat-label>E-Mail</mat-label>
           <input type="text" matInput formControlName="email" />
+          <div class="material-icons" matPrefix>mail</div>
         </mat-form-field>
       </div>
     </div>
@@ -36,6 +38,7 @@
     <mat-form-field appearance="fill" class="d-block">
       <mat-label>Address</mat-label>
       <textarea matInput formControlName="address"></textarea>
+      <div class="material-icons" matPrefix>place</div>
     </mat-form-field>
   </div>
 
