--- a/src/assets/styles/components/_display-field.scss
+++ b/src/assets/styles/components/_display-field.scss
@@ -13,7 +13,14 @@
   }
 
   &-value {
+    display: flex;
     color: $ink-dark;
+    flex-wrap: wrap;
+
+    .material-icons {
+      margin-right: 8px;
+      color: $ink-light;
+    }
   }
 
   & + & {
