--- a/src/app/features/contactlist/components/details/details.component.html
+++ b/src/app/features/contactlist/components/details/details.component.html
@@ -1,19 +1,23 @@
-<div class="card">
-  <ng-container *ngIf="contact$ | async as contact; else noItem">
-    <div class="flex-fill">
-      <ng-container *ngFor="let field of displayFields">
-        <div class="display-field row align-items-center">
-          <div class="display-field-label col-12 col-lg-3">{{ field.label }}</div>
-          <div class="display-field-value col-12 col-lg-9">
-            <div class="material-icons" *ngIf="field.icon">{{ field.icon }}</div>
-            <span>{{ getValue(contact, field.key) }}</span>
+<section class="details">
+  <div class="card">
+    <ng-container *ngIf="contact$ | async as contact; else noItem">
+      <div class="flex-fill">
+        <ng-container *ngFor="let field of displayFields">
+          <div class="display-field row align-items-center">
+            <div class="display-field-label col-12 col-lg-3">{{ field.label }}</div>
+            <div class="display-field-value col-12 col-lg-9">
+              <div class="material-icons" *ngIf="field.icon">{{ field.icon }}</div>
+              <span>{{ getValue(contact, field.key) }}</span>
+            </div>
           </div>
-        </div>
-      </ng-container>
-    </div>
-  </ng-container>
+        </ng-container>
+      </div>
+    </ng-container>
 
-  <ng-template #noItem>
-    <div class="message is-error">Item not found!</div>
-  </ng-template>
-</div>
+    <ng-template #noItem>
+      <div id="message_empty" class="message is-error">
+        <span>Item not found!</span>
+      </div>
+    </ng-template>
+  </div>
+</section>
