--- a/src/app/features/contactlist/components/details/details.component.html
+++ b/src/app/features/contactlist/components/details/details.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <ng-container *ngIf="contact$ | async as contact; else noItem">
       <div class="flex-fill">
-        <ng-container *ngFor="let field of displayFields">
+        <ng-container *ngFor="let field of displayFields; trackBy: fieldTrackBy">
           <div class="display-field row align-items-center">
             <div class="display-field-label col-12 col-lg-3">{{ field.label }}</div>
             <div class="display-field-value col-12 col-lg-9">
