feat: add postbuild step; add version string

--- a/src/app/features/contactlist/components/overview/overview.component.html
+++ b/src/app/features/contactlist/components/overview/overview.component.html
@@ -5,7 +5,7 @@
     </a>
 
     <h2 class="back__title">
-      <a href="#" [routerLink]="['/']">Contacts</a>
+      <a href="#" [routerLink]="['/']">Contacts <span class="text-meta">V%APP_VERSION%</span></a>
     </h2>
   </div>
 
