--- a/src/assets/styles/core/_variables.scss
+++ b/src/assets/styles/core/_variables.scss
@@ -11,6 +11,7 @@ $ink-dark: #000;
 $background-surface: #fff;
 $background-surface-hover: rgb(240, 240, 240);
 $background-surface-active: rgb(225, 225, 225);
+$background-surface-divider: rgb(205, 205, 205);
 
 // animation
 $duration-s: 150ms;
