feat: version string should not be part of the home link

--- a/src/app/features/contactlist/components/overview/overview.component.html
+++ b/src/app/features/contactlist/components/overview/overview.component.html
@@ -5,7 +5,8 @@
     </a>
 
     <h2 class="back__title">
-      <a href="#" [routerLink]="['/']">Contacts <span class="text-meta">V%APP_VERSION%</span></a>
+      <a href="#" [routerLink]="['/']">Contacts</a>
+      <span class="back__meta ms-2">V%APP_VERSION%</span>
     </h2>
   </div>
 
