--- a/src/assets/styles/material/_form-field.scss
+++ b/src/assets/styles/material/_form-field.scss
@@ -10,7 +10,7 @@
     .material-icons {
       display: block;
       margin-right: 8px;
-      color: $ink-light;
+      color: $ink-200;
     }
   }
 }
