--- a/src/app/features/contactlist/components/overview/overview.component.html
+++ b/src/app/features/contactlist/components/overview/overview.component.html
@@ -37,7 +37,7 @@
       </ul>
     </div>
 
-    <div class="col" [class.d-none]="!detailOutlet.isActivated">
+    <div class="col ps-lg-4" [class.d-none]="!detailOutlet.isActivated">
       <router-outlet #detailOutlet="outlet"></router-outlet>
     </div>
   </div>
