--- a/src/assets/styles/components/_list.scss
+++ b/src/assets/styles/components/_list.scss
@@ -16,7 +16,7 @@
   list-style: none;
 
   li + li {
-    border-top: $divider;
+    border-top: $box-border;
 
     &.list__divider {
       border-top: none;
