--- a/src/assets/styles/components/_list.scss
+++ b/src/assets/styles/components/_list.scss
@@ -1,7 +1,5 @@
-//
 // COMPONENTS | List
 // --------------------------------------------------
-
 .list {
   display: flex;
   flex-direction: column;
@@ -18,6 +16,7 @@
   li + li {
     border-top: $box-border;
 
+    /* stylelint-disable-next-line selector-class-pattern */
     &.list__divider {
       border-top: none;
     }
@@ -25,7 +24,7 @@
 
   &__item {
     display: block;
-    padding: 16px 24px 16px 24px;
+    padding: 16px 24px;
     transition: background-color $duration-s $timing-default;
 
     &:is(a) {
