feat: add cypress image snapshot

--- a/src/app/features/contactlist/components/overview/overview.component.html
+++ b/src/app/features/contactlist/components/overview/overview.component.html
@@ -6,7 +6,7 @@
 
     <h2 class="back__title">
       <a href="#" [routerLink]="['/']">Contacts</a>
-      <span class="back__meta ms-2">V%APP_VERSION%</span>
+      <!-- <span class="back__meta ms-2">V%APP_VERSION%</span> -->
     </h2>
   </div>
 
