--- a/src/app/features/contactlist/components/dialog/edit-dialog.component.html
+++ b/src/app/features/contactlist/components/dialog/edit-dialog.component.html
@@ -3,40 +3,34 @@
     <h1 mat-dialog-title>New Contact</h1>
     <div mat-dialog-content>
       <div class="row">
-        <div class="col">
-          <mat-form-field appearance="fill" class="d-block">
+        <div class="col-12 col-lg-6">
+          <mat-form-field class="d-block">
             <mat-label>First Name</mat-label>
             <input type="text" id="input_firstname" matInput formControlName="firstName" required />
           </mat-form-field>
         </div>
 
-        <div class="col">
-          <mat-form-field appearance="fill" class="d-block">
+        <div class="col-12 col-lg-6">
+          <mat-form-field class="d-block">
             <mat-label>Last Name</mat-label>
             <input type="text" id="input_lastname" matInput formControlName="lastName" required />
           </mat-form-field>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <mat-form-field appearance="fill" class="d-block">
-            <mat-label>Phone</mat-label>
-            <input type="text" id="input_phone" matInput formControlName="phone" />
-            <div class="material-icons" matPrefix>phone</div>
-          </mat-form-field>
-        </div>
+      <mat-form-field class="d-block">
+        <mat-label>Phone</mat-label>
+        <input type="text" id="input_phone" matInput formControlName="phone" />
+        <div class="material-icons" matPrefix>phone</div>
+      </mat-form-field>
 
-        <div class="col">
-          <mat-form-field appearance="fill" class="d-block">
-            <mat-label>E-Mail</mat-label>
-            <input type="text" id="input_email" matInput formControlName="email" />
-            <div class="material-icons" matPrefix>mail</div>
-          </mat-form-field>
-        </div>
-      </div>
+      <mat-form-field class="d-block">
+        <mat-label>E-Mail</mat-label>
+        <input type="text" id="input_email" matInput formControlName="email" />
+        <div class="material-icons" matPrefix>mail</div>
+      </mat-form-field>
 
-      <mat-form-field appearance="fill" class="d-block">
+      <mat-form-field class="d-block">
         <mat-label>Address</mat-label>
         <textarea id="input_address" matInput formControlName="address"></textarea>
         <div class="material-icons" matPrefix>place</div>
