--- a/src/assets/styles/material/_material.scss
+++ b/src/assets/styles/material/_material.scss
@@ -18,6 +18,11 @@ $contacts-accent: mat.define-palette(mat.$pink-palette, a200, a100, a400);
 // The warn palette is optional (defaults to red).
 $contacts-warn: mat.define-palette(mat.$red-palette);
 
+// Define typography settings
+$contacts-typography: mat.define-typography-config(
+  $font-family: '"Open Sans", sans-serif',
+);
+
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
 $contacts-theme: mat.define-light-theme(
@@ -27,6 +32,7 @@ $contacts-theme: mat.define-light-theme(
       accent: $contacts-accent,
       warn: $contacts-warn,
     ),
+    typography: $contacts-typography,
   )
 );
 
