--- a/src/assets/styles/components/_list.scss
+++ b/src/assets/styles/components/_list.scss
@@ -28,7 +28,7 @@
     padding: 16px 24px;
 
     &:is(a) {
-      color: currentColor;
+      color: currentcolor;
       text-decoration: none;
 
       &:hover {
