--- a/src/assets/styles/material/_material.scss
+++ b/src/assets/styles/material/_material.scss
@@ -13,7 +13,8 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $contacts-primary: mat.define-palette(mat.$indigo-palette);
-$contacts-accent: mat.define-palette(mat.$pink-palette, a200, a100, a400);
+/* stylelint-disable-next-line value-keyword-case */
+$contacts-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $contacts-warn: mat.define-palette(mat.$red-palette);
